@@ -19,7 +19,6 @@ package org.apache.nifi.controller;
 import org.apache.commons.lang3.ClassUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.nifi.annotation.behavior.RequiresInstanceClassLoading;
-import org.apache.nifi.annotation.behavior.Stateful;
 import org.apache.nifi.annotation.behavior.SupportsBatching;
 import org.apache.nifi.annotation.configuration.DefaultSettings;
 import org.apache.nifi.bundle.Bundle;
@@ -86,7 +85,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.net.ssl.SSLContext;
-
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Proxy;
 import java.net.URL;
@@ -509,9 +507,6 @@ public class ExtensionBuilder {
        applyDefaultSettings(procNode);
        applyDefaultRunDuration(procNode);
 
-       // Ensure StateManager is initialized with component's Stateful capabilities
-       getStateManagerForComponent(identifier, processor.getComponent().getClass());
-
        return procNode;
    }
 
@@ -530,9 +525,6 @@ public class ExtensionBuilder {
                    componentType, type, reloadComponent, extensionManager, validationTrigger, true);
            taskNode.setName(componentType);
        }
-
-       // Ensure StateManager is initialized with component's Stateful capabilities
-       getStateManagerForComponent(identifier, reportingTask.getComponent().getClass());
 
        return taskNode;
    }
@@ -558,9 +550,6 @@ public class ExtensionBuilder {
                    extensionManager, validationTrigger, true);
            parameterProviderNode.setName(componentType);
        }
-
-       // Ensure StateManager is initialized with component's Stateful capabilities
-       getStateManagerForComponent(identifier, parameterProvider.getComponent().getClass());
 
        return parameterProviderNode;
    }
@@ -679,8 +668,7 @@ public class ExtensionBuilder {
            final ComponentLog serviceLogger = new SimpleProcessLogger(identifier, serviceImpl, new StandardLoggingContext(null));
            final TerminationAwareLogger terminationAwareLogger = new TerminationAwareLogger(serviceLogger);
 
-           final StateManager stateManager = getStateManagerForComponent(identifier, serviceImpl.getClass());
-
+           final StateManager stateManager = stateManagerProvider.getStateManager(identifier);
            final ControllerServiceInitializationContext initContext = new StandardControllerServiceInitializationContext(identifier, terminationAwareLogger,
                    serviceProvider, stateManager, kerberosConfig, nodeTypeProvider);
            serviceImpl.initialize(initContext);
@@ -760,7 +748,7 @@ public class ExtensionBuilder {
        }
 
        if (!cobundledApis.isEmpty()) {
-           final String message = "Controller Service %s is bundled with its supporting APIs %s. The service APIs should not be bundled with the implementations.".formatted(
+           final String message = String.format("Controller Service %s is bundled with its supporting APIs %s. The service APIs should not be bundled with the implementations.",
                originalExtensionType.getName(), org.apache.nifi.util.StringUtils.join(cobundledApis.stream().map(Class::getName).collect(Collectors.toSet()), ", "));
            throw new InstantiationException(message);
        }
@@ -858,9 +846,6 @@ public class ExtensionBuilder {
            ruleNode.setName(componentType);
        }
 
-       // Ensure StateManager is initialized with component's Stateful capabilities
-       getStateManagerForComponent(identifier, flowAnalysisRule.getComponent().getClass());
-
        return ruleNode;
    }
 
@@ -955,14 +940,5 @@ public class ExtensionBuilder {
                Thread.currentThread().setContextClassLoader(ctxClassLoader);
            }
        }
-   }
-
-   /**
-    * Determines Stateful drop key support for the given component class and obtains the corresponding StateManager.
-    */
-   private StateManager getStateManagerForComponent(final String componentId, final Class<?> componentClass) {
-       final Stateful stateful = componentClass.getAnnotation(Stateful.class);
-       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-       return stateManagerProvider.getStateManager(componentId, dropStateKeySupported);
    }
 }
